Update lightweight-charts to v4